<resources>
    <string name="app_name">DesignIt</string>

    <!-- Bottom menu -->
    <string name="mi_home_name">Home</string>
    <string name="mi_classes_name">Classes</string>
    <string name="mi_list_name">List</string>
    <string name="mi_fav_name">Fav</string>

    <!-- Top menu -->
    <string name="mi_search_name">Search</string>
    <string name="mi_filter_name">Filter</string>
    <string name="mi_profile_name">Profile</string>
    <string name="id_for_toptext">tv_text_top</string>
    <string name="mi_table_view">Table</string>
    <string name="mi_grid_view">Grid</string>

    <!-- Default Text -->
    <string name="hi_name_string">Hi, User!</string>

    <!-- Countdown Text -->
    <string name="countdown_title_string">Are you ready for the future?</string>
    <string name="countdown_subtitle_days">Days</string>
    <string name="countdown_subtitle_hours">Hours</string>
    <string name="countdown_subtitle_minuutes">Minutes</string>
    <string name="countdown_delimiter">:</string>
    <string name="countdown_default_text">0</string>

    <!-- Classes Section -->
    <string name="classes_title_text">Classes</string>
    <string name="button_skype_text">S\nk\ny\np\ne</string>

    <!-- Homework Section -->
    <string name="homeworks_title_text">Homeworks</string>
    <string name="homeworks_time_default">days left</string>

    <!-- Second Screen -->



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">FAKE SCREEN FRAGMENT</string>
    <string name="class_icon_descr_text">Class icon</string>

</resources>